@@ -1,3 +1,8 @@
+2008-12-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (applet_pre_keyring_callback): handle right-click menu too
+
 2008-12-09  Dan Williams  <dcbw@redhat.com>
 
 	* configure.ac
